<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FunFacts" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uai-Pn-8R1">
                                <rect key="frame" x="52" y="448" width="216" height="61"/>
                                <color key="backgroundColor" red="1" green="1" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="61" id="Pkd-zs-NMB"/>
                                    <constraint firstAttribute="width" constant="216" id="dJK-kn-RUp"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                <color key="tintColor" red="0.35294117650000001" green="0.7725490196" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Show Another Fun Fact"/>
                                <connections>
                                    <action selector="showFunFact" destination="BYZ-38-t0r" eventType="touchUpInside" id="FPM-zo-FSv"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Did you know?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ogp-cD-2Tp">
                                <rect key="frame" x="66" y="81" width="116" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="116" id="GbM-ji-oIo"/>
                                    <constraint firstAttribute="height" constant="21" id="l1N-Rz-X9i"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="An Interesting Fact Goes Here" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2R-bW-C5o">
                                <rect key="frame" x="66" y="206" width="216" height="45"/>
                                <accessibility key="accessibilityConfiguration" label="Fact Label"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="216" id="asq-vo-XWM"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="19"/>
                                <color key="textColor" red="1" green="1" blue="0.99607843139999996" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="0.3529411764705882" green="0.77254901960784317" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="s2R-bW-C5o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="66" id="VAU-Ep-1Pq"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uai-Pn-8R1" secondAttribute="bottom" constant="91" id="Z7K-94-ArO"/>
                            <constraint firstItem="s2R-bW-C5o" firstAttribute="top" secondItem="ogp-cD-2Tp" secondAttribute="bottom" constant="104" id="ar7-9g-nqi"/>
                            <constraint firstItem="ogp-cD-2Tp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="46" id="glB-VH-ute"/>
                            <constraint firstItem="ogp-cD-2Tp" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="61" id="hOy-gp-9PN"/>
                            <constraint firstItem="uai-Pn-8R1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="32" id="jEa-4s-40W"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="funFactButton" destination="uai-Pn-8R1" id="14D-kX-QTi"/>
                        <outlet property="funFactLabel" destination="s2R-bW-C5o" id="rJS-Kg-PaU"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="288" y="321"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="cru-yV-V1r">
            <objects>
                <viewController id="H9i-tE-eYI" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="pBQ-rT-f40"/>
                        <viewControllerLayoutGuide type="bottom" id="Jmf-h6-L09"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="sUg-pi-IV5">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="EKk-58-s47" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
